--- a/index.html
+++ b/index.html
@@ -8,10 +8,94 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
     <title>Spotify</title>
 </head>
 <body>
+    <!-- wrapper -->
+    <div class="weapper">
+        <main>
+            <!-- nav bar -->
+            <nav></nav>
+            <!-- contenitore centrale -->
+            <section class="main-content">
+                <aside class="debug"></aside>
+                <section class="inner-content">
+                    <div class="nav-main debug">
+                        <ul class="dflex">
+                            <li><a href="#">IN EVIDENZA</a></li>
+                            <li><a href="#">PODCAST</a></li>
+                            <li><a href="#">CLASSIFICHE</a></li>
+                            <li><a href="#">GENERI E MOOD</a></li>
+                            <li><a href="#">NUOVE USCITE</a></li>
+                            <li><a href="#">SCOPRI</a></li>
+                        </ul>
+
+
+                    </div>
+                    <!-- parte centrale -->
+                    <h2>Recently played</h2>
+                    <div class="content-songs dflex debug">
+                        <div class="box-songs">
+                            <img src="./img/metal_lifting.jpg" alt="">
+                            <h3> Heavy Metal</h3>
+                            <p>Subtitle</p>
+                        </div>
+
+                        <div class="box-songs ">
+                            <img src="./img/stranger.jpeg" alt="">
+
+                            <h3> Strange Things vol.1
+                            </h3>
+                            <p>Subtitle</p>
+                        </div>
+
+                        <div class="box-songs">
+                            <img src="./img/split.jpeg" alt="">
+                            <h3> Split </h3>
+                            <p>Subtitle</p>
+                        </div>
+
+                        <div class="box-songs">
+                            <img src="./img/aquietplace.jpeg" alt="">
+                            <h3> A quiet place</h3>
+                            <p>Subtitle</p>
+                        </div>
+
+                        <div class="box-songs">
+                            <img src="./img/sinister.jpeg" alt="">
+                            <h3> Sinister</h3>
+                            <p>Subtitle</p>
+                        </div>
+
+                        <div class="box-songs">
+                            <img src="./img/cure.jpeg" alt="">
+                            <h3>A cure for wellness</h3>
+                            <p>Subtitle</p>
+                        </div>
+
+
+
+                    </div>
+
+
+
+                </section>
+
+            </section>
+
+
+
+
+
+
+        </main>
+        <div class="playbar">
+
+        </div>
+
+    </div>
     
 </body>
 </html>
