--- a/index.html
+++ b/index.html
@@ -69,16 +69,46 @@
                             <p>Subtitle</p>
                         </div>
 
-                        <div class="box-songs">
+                        <div class="box-songs play">
                             <img src="./img/cure.jpeg" alt="">
                             <h3>A cure for wellness</h3>
                             <p>Subtitle</p>
                         </div>
 
+                    </div>
+                     <!-- parte centrale2 -->
+                    <h2> Creato per Michele</h2>
+                    <p>Più ascolti, più accurati saranno i suggerimenti</p>
+                    <div class="content-songs dflex debug">
+                        <div class="box-songs box-songs2">
+                            <img src="./img/mixdaily.jpeg" alt="">
+                            <h3> Daily Mix1</h3>
+                        </div>
 
+                        <div class="box-songs ">
+                            <img src="./img/radar.jpeg" alt="">
+
+                            <h3> Release Radar</h3>
+                        </div>
 
                     </div>
 
+                    <!-- parte centrale3 -->
+                    <h2> Artisti più popolari</h2>
+                    <p>Artisti pù ascoltati del momento</p>
+                    <div class="content-songs dflex debug ">
+                        <div class="box-songs">
+                            <img src="./img/einaudi.jpeg" alt="" class="radisu">
+                            <h3> Enaudi</h3>
+                        </div>
+
+                        <div class="box-songs">
+                            <img src="./img/player_left.jpg" alt="" >
+
+                            <h3> Release Radar</h3>
+                        </div>
+
+                    </div>
 
 
                 </section>
