--- a/index.html
+++ b/index.html
@@ -17,7 +17,32 @@
     <div class="weapper">
         <main>
             <!-- nav bar  left -->
-            <nav></nav>
+            <nav>
+                <div class="big-logo"> 
+                    <img src="./img/logo.svg" alt="">
+                </div>
+                <div class="home dflex">
+                    <img src="./img/home.svg" alt="">
+                    <h2>Home</h2>
+                </div>
+                <div class="home dflex">
+                    <img src="./img/search.svg" alt="">
+                    <h2>Cerca</h2>
+                </div>
+                <div class="home dflex">
+                    <img src="./img/libreria.svg" alt="">
+                    <h2>libreria</h2>
+                </div>
+                <h2> PLAYLIST</h2>
+                <div class="dflex align-center">
+                   <div class="square align-cente">
+                   </div>
+                   <h3> Crea Playlist</h3>
+
+                </div>
+
+
+            </nav>
             <!-- contenitore centrale -->
             <section class="main-content">
                 <!-- parte alta -->
@@ -42,7 +67,7 @@
                             <div class="cover-image"></div>
                             <img src="./img/metal_lifting.jpg" alt="">
                             <div class="cover-overlay">
-                                <i class="fa-regular fa-circle-play"></i>
+                               <i><img src="./img/circle-play-regular (1).svg" alt=""></i>
                             </div>
                             <h3> Heavy Metal</h3>
                             <p>Subtitle</p>
